tests/parsing/fail/illegal_include.circom
include 2;
include;
include lol;

template T() {
}

component main = T();
